2011-03-11 16:24  paddockd

	* [r246] ChangeLog, contrib/makefile.linux24-ffmpeg-alsa-display,
	  src/slimaudio/slimaudio_decoder.c,
	  src/slimaudio/slimaudio_decoder_aac.c,
	  src/slimaudio/slimaudio_decoder_wma.c: Initial support for native
	  aac decoder on linux little endian hardware.
	  Updated ffmpeg linux makefile to use gcc-4.3 to avoid stack
	  mis-alignment errors.

2011-03-10 12:50  paddockd

	* [r245] ChangeLog, TODO, src/slimaudio/slimaudio_decoder.c,
	  src/slimaudio/slimaudio_decoder_wma.c,
	  src/squeezeslave/squeezeslave.c: Added wma decoder failure logic
	  to have the server stop squeezeslave when an error occurs. Prior
	  behaviour had squeezeslave playing endless silence until stop was
	  pressed.
	  Wma decoder does not handle mms streams yet.
	  Added "BYE!" slimprotocol packet send on exit, currently
	  disabled.

2011-03-08 12:40  paddockd

	* [r244] ChangeLog, TODO,
	  contrib/makefile.linux24-ffmpeg-alsa-display,
	  contrib/makefile.linux24-nofpu-alsa-display,
	  contrib/makefile.linux26-armel-alsa,
	  contrib/makefile.linux26-armel-nofpu-alsa-display,
	  contrib/makefile.linux26-mipsel-nofpu-alsa,
	  contrib/makefile.linux26-nofpu-alsa-display,
	  contrib/makefile.linux26-ppc-alsa-display,
	  makefile.linux24-alsa-display, makefile.linux26-alsa-display,
	  makefile.linux26-i64-alsa-display,
	  src/slimaudio/slimaudio_decoder_wma.c: Added alsa error handler
	  patch to remaining makefiles.

2011-03-05 20:59  paddockd

	* [r243] ChangeLog,
	  contrib/makefile.linux26-armel-nofpu-alsa-display,
	  patches/build-portaudio-enable-alsaerrhandler.patch,
	  src/squeezeslave/squeezeslave.c: Added patch to reenable alsa
	  "null" error handler to remove the alsalib error message spew.
	  Added alsa error handler patch to armel squeezeplug makefile.
	  Increased version to 243.

2011-03-05 20:52  paddockd

	* [r242] ChangeLog, contrib/makefile.linux24-ffmpeg-alsa-display,
	  src/slimaudio/slimaudio_decoder_wma.c: Fixed occasional crash in