@@ -1,3 +1,9 @@
+2011-03-13 14:25  paddockd
+
+	* [r247] ChangeLog, src/slimaudio/slimaudio_decoder_aac.c,
+	  src/slimaudio/slimaudio_decoder_wma.c: wma and aac decoder code
+	  cleanup.
+
 2011-03-11 16:24  paddockd
 
 	* [r246] ChangeLog, contrib/makefile.linux24-ffmpeg-alsa-display,
